# Systemy-operacyjne

cw01/zad1/: Makefile
cw01/zad2/: Makefile  comment2.txt  main.c  report2.txt
cw01/zad3a/: Makefile  comment3a.txt  main.c  report3a.txt
cw01/zad3b/: Makefile  blocks.c  blocks.h  comment3b.txt  main.c  main_dy  main_sh  main_st  report3b.txt
cw02/zad1/: file  komentarz.txt  main  main.c  makefile  test.sh  wyniki.txt
cw02/zad2/: komentarz.txt  main.c  makefile
cw03/zad1/: main  main.c
cw03/zad2/: kaczka  makefile  matko  monitor  monitor.c
cw03/zad3/: aze  kaczka  makefile  monitor  monitor.c  tester  tester.c
cw04/zad1/: date  main_1  main_1.c  main_2  main_2.c  makefile
cw04/zad2/: aze  kaczka  list  makefile  matko  monitor  monitor.c
cw04/zad3a/: catcher  catcher.c  komentarz  makefile  sender  sender.c
cw04/zad3b/: catcher.c  sender.c
cw05/zad1/: da  interpreter  interpreter.c  makefile
cw05/zad2/: makefile  master  master.c  slave  slave.c
cw06/zad1/: chat.h  client  client.c  makefile  server  server.c
cw06/zad2/: chat.h  client  client.c  makefile  server  server.c  test
cw07/zad1/: helper.c  helper.h  loader  loader.c  makefile  tape.c  tape.h  trucker  trucker.c  worker
cw07/zad2/: helper.h  loader  makefile  tape.h  trucker  trucker.c  worker  worker.c
cw08/zad1/: Times.txt  filtergen.c  filtr.c  komentarz  makefile  test.sh
cw09/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  helper.h  queue.c  queue.h  rollercoaster.c
cw10/zad2/: CMakeLists.txt  Makefile  client.c  helper.c  helper.h  server.c
(+11 files in other folders)
